app/assets/stylesheets/core.css.scss
// 配信画像のモーダル表示時の背景色
.modal-backdrop {
  background-color: #E4E1E3
}

// 背景が無いモーダル用のクラス（Avatar設定ダイアログ等）
.modal-color-none .modal-backdrop {
  background: none;
}


// アバター変更フォーム
.modal.modal-avatar {
  // TODO: hard codingを解消する
  position: fixed;
  top: 3%;
  left: -68.2%;
}
.modal.modal-images {
  overflow-y: scroll; /* has to be scroll, not auto */
  -webkit-overflow-scrolling: touch;
}


// モーダルのウィンドウ幅の設定
.modal.modal-avatar .modal-dialog { width: 250px; }

.modal.modal-images .modal-dialog { width: 800px; }

.modal.modal-boards .modal-dialog { width: 300px; }

